syntax                                      = "proto3";

package ability;

option (gogoproto.testgen_all)              = true;
option (gogoproto.benchgen_all)             = true;
option (gogoproto.populate_all)             = true;
option (gogoproto.goproto_getters_all)      = false;
option (gogoproto.goproto_stringer_all)     = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_registration)     = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/elojah/game_03/pkg/geometry/geometry.proto";

message CastTarget {
    bytes ID                              = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	geometry.Rect Rect                    = 2;
	geometry.Circle Circle                = 3;
}

message Cast {
    bytes SourceID                        = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    bytes AbilityID                       = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

	map<string, CastTarget> Targets      = 3 [(gogoproto.nullable) = false];
}
